Kubernetes/deployment_with_volume.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webserver
  labels:
    app: webserver
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webserver
  template:
    metadata:
      labels:
        app: webserver
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
          name: http
        volumeMounts:
        - name: pvc-webserver
          mountPath: /webdata
      volumes:
      - name: pvc-webserver
        persistentVolumeClaim:
          claimName: azurefile
