Kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: webserver
  labels:
    app: nginx-app
spec:
  containers:
    - name: web
      image: nginx
      ports:
        - name: web
          containerPort: 80
          protocol: TCP
