Kubernetes/phpapp-deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: phpapp
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: phpapp
  template:
    metadata:
      labels:
        app: phpapp
    spec:
      containers:
        - name: phpapp
          image: nginx
---

apiVersion: v1
kind: Service
metadata:
  name: svc-phpapp
spec:
  selector:
    app: phpapp
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
  type: LoadBalancer
