Kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: svc-webserver
spec:
  selector:
    app: webserver
  ports:
  - protocol: "TCP"
    port: 80
    targetPort: 80
